objects/ASI_KOR_FR_Report__c.object
<CustomObject>
    <fields>
        <fullName>ASI_KOR_AP_Promotion_Number__c</fullName>
        <label>A&amp;P Promotion Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Account__c</fullName>
        <label>Account</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand_Category__c</fullName>
        <label>Brand Category</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Brand</label>
        <referenceTo>ASI_KOR_Brand__c</referenceTo>
        <relationshipLabel>FR Reports</relationshipLabel>
        <relationshipName>FR_Reports</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Customer_Code__c</fullName>
        <label>Customer Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Data__c</fullName>
        <label>Data</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Fiscal_Month__c</fullName>
        <label>Fiscal Month</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Region_Code__c</fullName>
        <label>Region Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_KOR_Scenario_Code__c</fullName>
        <label>Scenario Code</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>T</fullName>
                </value>
                <value>
                    <fullName>LE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ASI_KOR_UOM__c</fullName>
        <label>UOM</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>FR Report</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_01</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_01</value>
        </filters>
        <label>All_INT_01</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_02</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_02</value>
        </filters>
        <label>All_INT_02</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_03</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_03</value>
        </filters>
        <label>All_INT_03</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_04</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_04</value>
        </filters>
        <label>All_INT_04</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_05</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_05</value>
        </filters>
        <label>All_INT_05</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_06</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_06</value>
        </filters>
        <label>All_INT_06</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_07</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_07</value>
        </filters>
        <label>All_INT_07</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_INT_07_2014</fullName>
        <columns>RECORDTYPE</columns>
        <columns>ASI_KOR_Scenario_Code__c</columns>
        <columns>ASI_KOR_Fiscal_Month__c</columns>
        <columns>ASI_KOR_Brand_Category__c</columns>
        <columns>ASI_KOR_Brand__c</columns>
        <columns>ASI_KOR_Customer_Code__c</columns>
        <columns>ASI_KOR_Region_Code__c</columns>
        <columns>ASI_KOR_AP_Promotion_Number__c</columns>
        <columns>ASI_KOR_Account__c</columns>
        <columns>ASI_KOR_UOM__c</columns>
        <columns>ASI_KOR_Data__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>ASI_KOR_FR_Report__c.ASI_KOR_SFDC_INT_07</value>
        </filters>
        <filters>
            <field>ASI_KOR_Fiscal_Month__c</field>
            <operation>startsWith</operation>
            <value>2014</value>
        </filters>
        <filters>
            <field>ASI_KOR_Scenario_Code__c</field>
            <operation>equals</operation>
            <value>LE1</value>
        </filters>
        <label>All_INT_07_2014_LE1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FR-{000000}</displayFormat>
        <label>FR Report Ref. No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FR Reports</pluralLabel>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_01</fullName>
        <active>true</active>
        <label>SFDC_INT_01</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_02</fullName>
        <active>true</active>
        <label>SFDC_INT_02</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_03</fullName>
        <active>true</active>
        <label>SFDC_INT_03</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_04</fullName>
        <active>true</active>
        <label>SFDC_INT_04</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_05</fullName>
        <active>true</active>
        <label>SFDC_INT_05</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_06</fullName>
        <active>true</active>
        <label>SFDC_INT_06</label>
    </recordTypes>
    <recordTypes>
        <fullName>ASI_KOR_SFDC_INT_07</fullName>
        <active>true</active>
        <label>SFDC_INT_07</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>